[tool.poetry]
name = "lattegallery"
version = "0.1.0"
description = ""
authors = ["ajkkln <alina.meow.228@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
pydantic = "^2.9.2"
uvicorn = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
